# aethereye

./: .gitignore  CHANGELOG.md  CONVENTIONS.md  README.md  deno.json  index.html  vite.config.ts
src/: app.tsx  main.tsx  style.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
